--- a/_Imports.razor
+++ b/_Imports.razor
@@ -8,3 +8,5 @@
 @using Microsoft.JSInterop
 @using GestaoEstadoFluxor
 @using GestaoEstadoFluxor.Shared
+@using Fluxor;
+@using Fluxor.Blazor.Web.Components;
