--- a/Shared/NavMenu.razor
+++ b/Shared/NavMenu.razor
@@ -1,4 +1,8 @@
-﻿<div class="top-row ps-3 navbar navbar-dark">
+﻿@inherits FluxorComponent
+@using GestaoEstadoFluxor.Features.Counter.Store
+@inject IState<CounterState> counterStarte
+
+<div class="top-row ps-3 navbar navbar-dark">
     <div class="container-fluid">
         <a class="navbar-brand" href="">GestaoEstadoFluxor</a>
         <button title="Navigation menu" class="navbar-toggler" @onclick="ToggleNavMenu">
@@ -16,7 +20,7 @@
         </div>
         <div class="nav-item px-3">
             <NavLink class="nav-link" href="counter">
-                <span class="oi oi-plus" aria-hidden="true"></span> Counter
+                <span class="oi oi-plus" aria-hidden="true"></span> Counter (@counterStarte.Value.CurrentCounte)
             </NavLink>
         </div>
         <div class="nav-item px-3">
